src/test/ui/consts/partial_qualif.rs
use std::cell::Cell;

const FOO: &(Cell<usize>, bool) = {
    let mut a = (Cell::new(0), false);
    a.1 = true; // sets `qualif(a)` to `qualif(a) | qualif(true)`
    &{a} //~ ERROR borrow to an interior mutable value may end up in the final value
};

fn main() {}
